# Detectron2-ROS

./: .gitignore  CMakeLists.txt  package.xml  readme.md
launch/: semantic_segmentation.launch
scripts/: label_point_cloud_node.py  semantic_segmentation_node.py
scripts/modules/: detectron_semantic_segmentation.py
