<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detectron2_ros</name>
  <version>0.0.0</version>
  <description>Implements the node responsible for semantic segmentation.</description>
  <maintainer email="carlos.andre.prze@outlook.com">André Przewodowski</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
